<resources>
    <string name="bnr_admob" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_admob" translatable="false">/6499/example/native</string>
    <string name="int_admob" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_open_admob" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="video_admob" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="privacy_policy">https://example.com/</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appId">ca-app-pub-1047541854942914~9986946639</string>
    <string name="app_name">Hidden Camera Detector</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_playback_speed_normal">Normal</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="text1">Camera Detector is an application which utilizes Magnetic Field Sensor.This highlight needs attractive sensor (magnetometer) in your gadget. In the event that attractive sensor is absent, application will show No attractive sensor accessible in your gadget message and this component wont be accessible.</string>
    <string name="text2">Assuming your gadget has attractive sensor, recognize position of attractive sensor in your gadget. It very well may be at upper left or upper right of your gadget. The most ideal way to recognize position is to take another camera and sweep 360. The position where application signals is sensor position in your gadget.</string>
    <string name="text3">Presently, draw application nearer to each presume you have in room, for instance screws, vase, showerhead and so forth confronting sensor towards the suspect. If application signals when drawn nearer and quit blaring when moved away, further research for the focal point. Now and then application might signal close by a few metal items, or gadgets. Ensure you recognize the examples</string>
    <string name="text4">At the point when your application begins making a signal sound it shows potential camera identified or some sort metals detected.If application begins blaring with potential camera recognised message without having any camera close by, reset your attractive sensor. Additionally check assuming there is any electronic gadget close by like microwave or fridge. Attempt to stay away from electric impact however much as could be expected. Application will give you misleading sign assuming it is affected by electronic gadget other than camera.</string>
    <string name="text5">Whenever readings are balanced out and application isn’t blaring, observe objects that you have suspect look forMost Common Places for buried Camera and draw application nearer to it, (scarcely any cm’s or inches) and check assuming it is causes any spike in attractive readings or on the other hand if application began signaling.</string>
    <string name="text6">Assuming item itself is electronic gadget like TV, it very well may be a misleading sign. In some cases electronic impact from electric wiring inside dividers can slow down the application giving bogus sign so generally be insightful prior to settling on any choice. The most effective way is to check for focal point around those suspects</string>
    <string name="text7">Assuming worth is in the middle of 50 to 80, item would be Computer/television/Mobile gadget parts. \n Assuming worth is in the middle of 80 to 120, item would be Potential Camera/Small sort of Speakers. \n Assuming worth is in the middle of 120 to 160, item would be Camera or Strong metal. \n In the event that worth is more noteworthy than 160, it implies High radiation identified in encompass.</string>
    <string name="text8">Infrared camera locator - This application has another instrument which is recognize infrared lights.Just open the infrared finder and sweep for white light that show up on screen yet not apparent by unaided eye. Such white light show infrared light.It could be infrared camera. Your ordinary cam can likewise distinguish it however what we have is inbuilt element with iridescence impact.</string>
</resources>